<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white0"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0.5"
        android:background="@color/gray6"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_16"
        android:text="@string/bank_name"
        style="@style/black1_15"
        app:layout_marginTopPercent="2.5%"
        />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_16"
        android:layout_marginRight="@dimen/dimen_16"
        android:background="@drawable/bg_before2_5"
        android:hint="@string/eg_chain_bank"
        android:paddingLeft="@dimen/dimen_16"
        android:paddingBottom="@dimen/dimen_10"
        android:paddingTop="@dimen/dimen_10"
        android:textColor="#777777"
        android:textSize="@dimen/dimen_15"
        app:layout_marginTopPercent="1.7%" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_16"
        android:text="@string/open_bank"
        style="@style/black1_15"
        app:layout_marginTopPercent="2.5%"
        />
    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_16"
        android:layout_marginRight="@dimen/dimen_16"
        android:paddingBottom="@dimen/dimen_10"
        android:paddingTop="@dimen/dimen_10"
        android:background="@drawable/bg_before2_5"
        app:layout_marginTopPercent="1.7%"
        android:paddingLeft="@dimen/dimen_16"
        android:hint="@string/eg_shen_zhen_bank"
        android:textSize="@dimen/dimen_15"
        android:textColor="#777777"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_16"
        android:text="@string/account"
        style="@style/black1_15"
        app:layout_marginTopPercent="2.5%"
        />
    <EditText
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_16"
        android:layout_marginRight="@dimen/dimen_16"
        android:paddingBottom="@dimen/dimen_10"
        android:paddingTop="@dimen/dimen_10"
        android:background="@drawable/bg_before2_5"
        app:layout_marginTopPercent="1.7%"
        android:paddingLeft="@dimen/dimen_16"
        android:hint="@string/please_bank_account"
        android:textSize="@dimen/dimen_15"
        android:textColor="#777777"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_16"
        android:text="@string/name"
        style="@style/black1_15"
        app:layout_marginTopPercent="2.5%"
        />
    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_16"
        android:layout_marginRight="@dimen/dimen_16"
        android:paddingBottom="@dimen/dimen_10"
        android:paddingTop="@dimen/dimen_10"
        android:background="@drawable/bg_before2_5"
        app:layout_marginTopPercent="1.7%"
        android:paddingLeft="@dimen/dimen_16"
        android:hint="@string/own_bank_name"
        android:textSize="@dimen/dimen_15"
        android:textColor="#777777"
        />

</com.zhy.android.percent.support.PercentLinearLayout>
